<resources>
    <string name="app_name">Yanolkka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="loading">로딩중입니다.</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="positive">네</string>
    <string name="negative">아니오</string>

    <string name="home">홈</string>
    <string name="location">지역</string>
    <string name="nearby">내주변</string>
    <string name="like">찜</string>
    <string name="my_page">MY 야놀자</string>

    <string name="domestic">국내숙소</string>
    <string name="domLeisure">국내레저</string>
    <string name="overseas">해외숙소</string>

    <string name="viewLikeAfterSignIn">로그인 후\n찜목록을 확인해주세요.</string>
    <string name="signIn">로그인</string>
    <string name="signUp">회원가입</string>

    <string name="nativeSignIn">야놀자 로그인</string>
    <string name="comfortableSignIn">간편 로그인</string>
    <string name="idOrEmail">아이디 또는 이메일</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="pwConcrete">비밀번호-영문+숫지+특문 8~20자</string>
    <string name="pwCheck">비밀번호 확인</string>
    <string name="findPassword">비밀번호 찾기</string>
    <string name="signUpYanolja">야놀자 회원가입</string>
    <string name="selfAuth">본인인증</string>
    <string name="phoneNum">휴대폰번호</string>
    <string name="sendAuthCode">인증번호 발송</string>
    <string name="inputAuthCode">인증번호 입력</string>
    <string name="noticeAuthCode">※ 인증번호 발송은 카카오 알림톡을 통해 발송 됩니다.\n야놀자 카카오 알림톡을 차단하셨는지 꼭 확인해주세요.\n카카오톡 미이용 고객은 SMS로 대체 발송됩니다.</string>
    <string name="finishSignUp">회원가입 완료</string>
    <string name="signUpComment">이제, 휴대폰 등록만 하면 회원가입 완료!</string>

    <string name="signInAd">지금 가입만 해도 즉시 사용 가능한 쿠폰팩지급! 차이 결제시 무조건 중복 할인</string>
    <string name="ComfortableSignInNotice">간편 로그인을 위해서는 야놀자 계정으로 가입 후,\n계정 연동이 필요합니다.</string>

    <string name="signInPhoneNum">휴대폰 번호로 로그인</string>
    <string name="signInNaver">네이버 로그인</string>
    <string name="signInPayco">PAYCO 로그인</string>

    <string name="agreeAll">전체 동의</string>
    <string name="agreeAge">만 14세 이상입니다</string>
    <string name="agreeService">서비스 이용약관 동의</string>
    <string name="agreeServiceDetails">광고성 정보 수신동의 포함</string>
    <string name="agreeProfile">개인정보 수집 및 이용 동의</string>
    <string name="agreeProfileDetails1">예약 및 서비스 이용을 위한 필수 개인정보 수집</string>
    <string name="agreeProfileDetails2">서비스 혜택 동의 정보 제공을 위한 개인정보 수집 및 활용</string>
    <string name="agreeLocation">위치 정보 이용약관 동의</string>
    <string name="agreeLocationDetails">위치정보를 통한 내 주변 숙소정보 제공</string>
    <string name="agreeRetain">장기 미접속 시에도 계정 유지</string>
    <string name="agreeRetainDetails">* 미동의 시 1년 미접속 회원 탈퇴 전환</string>
    <string name="agreeMore">* 선택 항목에 동의하지 않으셔도 계속 가입을 진행하실 수 있습니다.</string>

    <string name="signUpInfo">회원 정보</string>
    <string name="signOut">로그아웃</string>

    <string name="mandatory">(필수)</string>
    <string name="choice">(선택)</string>
    <string name="next">다음</string>

    <string name="motel">모텔</string>
    <string name="chooseRegion">지역선택</string>
    <string name="hotelResort">호텔/리조트</string>
    <string name="pensionVilla">펜션/풀빌라</string>
    <string name="guesthouse">게스트하우스</string>

    <string name="infiniteCouponRoom">#무한쿠폰룸</string>
    <string name="franchise">#프렌차이즈</string>
    <string name="newRemodeled">#신축/리모델링</string>
    <string name="superDealHotel">#초특가호텔</string>
    <string name="partyRoom">#파티룸</string>
    <string name="spaPension">#스파펜션</string>

    <string name="sampleAccommodationName">호텔 크레센도 서울</string>
    <string name="sampleMotelName">역삼 맨하탄</string>
    <string name="review">후기</string>
    <string name="forOneNight">1박 기준</string>

    <string name="motelRental">대실</string>
    <string name="stayNight">숙박</string>

    <string name="similarWithRecentlyViewed">최근 본 상품의 연관상품</string>
    <string name="seeAll">전체 보기</string>

    <string name="search">검색</string>
    <string name="leisureAndTicket">레저/티켓</string>

    <string name="searchDomesticEditTextHint">지역, 지하철역, 숙소명으로 찾아보세요!</string>

    <string name="availableWithCoupon">쿠폰 할인 가능한 숙소</string>

    <string name="numberOfResults">개의 검색결과</string>

    <string name="yet">미개발된 기능(페이지)입니다</string>

    <string name="eventSample">대실 예약 Early-Bird 혜택 이벤트! 배그 가능한 pc 지원</string>

    <string name="priceGuarantee">최저가보장</string>

    <string name="reset">초기화</string>

    <string name="networkError">네트워크 연결이 원활하지 않습니다.</string>
    <string name="tokenSuccess">토큰 발급 성공</string>

    <string name="chooseDate">날짜 선택</string>
    <string name="askChooseDate">날짜를 선택해주세요</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>

    <string name="numPeople">인원수 선택</string>
    <string name="numPeopleNotice1">정확한 숙소검색 결과를 확인하려면</string>
    <string name="numPeopleNotice2">인원수를 선택해주세요.</string>
    <string name="adult">성인</string>
    <string name="kid">아동</string>

    <string name="alertForKids">아동의 입실여부와 추가요금은 숙소마다 상이하므로\n예약 시 안내사항을 참고해주세요.</string>

    <string name="chooseAge">나이 선택</string>

    <string name="letApply">적용하기</string>

    <string name="adSignUp">지금 회원가입 시 웰컴쿠폰 즉시 지급!</string>
    <string name="goSignInAndSignUp">로그인 및 회원가입 하기 ></string>

    <string name="myBenefits">MY 혜택</string>
    <string name="point">포인트</string>
    <string name="yanoljaCoin">야놀자 코인</string>
    <string name="couponBox">쿠폰함</string>
    <string name="myReviews">나의 후기</string>
    <string name="usageRecords">예약 및 이용 내역</string>
    <string name="checkMyInfo">내정보 관리</string>

    <string name="travelInsurance">해외 여행자 보험</string>

    <string name="event">이벤트</string>
    <string name="planning">기획전</string>
    <string name="research">리서치 참여</string>
    <string name="winnings">당첨자 발표</string>

    <string name="appeal1">최강 혜택 야놀자!</string>
    <string name="appeal2">믿고 쓰는 야놀자!</string>

    <string name="ARS">고객센터</string>
    <string name="ARSWorkingTime">265일 오전 9시 ~ 익일 오전 3시 운영</string>
    <string name="kakaoARS">카카오톡 1:1 문의</string>
    <string name="callingService">상담원 연결</string>

    <string name="FAQ">자주 묻는 질문 FAQ</string>
    <string name="notice">공지사항</string>
    <string name="yanoljaInfo">야놀자 정보</string>
    <string name="settings">설정</string>

    <string name="appLock">암호잠금</string>
    <string name="socialSignIn">간편로그인</string>
    <string name="notification">알림 설정</string>
    <string name="privacyAuthority">개인정보 권한설정</string>
    <string name="openSourceLicences">오픈소스 라이선스</string>

    <string name="requestPwForPrivacy">회원님의 소중한 개인정보를 안전하게 보호하기 위해\n비밀번호를 한번 더 입력해주세요.</string>
    <string name="requestPw">비밀번호를 입력해주세요.</string>

    <string name="privacy">개인정보</string>
    <string name="id">아이디</string>
    <string name="edit">수정하기</string>
    <string name="withdrawal">회원탈퇴</string>

    <string name="nickname">닉네임</string>

    <string name="inputCurrentPw">현재 비밀번호를 입력</string>
    <string name="inputNewPw">새 비밀번호 - 영문+숫자+특문 8~20자</string>
    <string name="checkNewPw">새 비밀번호 확인</string>
    <string name="map">지도</string>
    <string name="title_activity_maps">Map</string>

    <string name="ctrRegion">지역별</string>

    <string name="accomIntroduction">숙소 소게</string>
    <string name="roomDetails">객실상세</string>
    <string name="callAccom">전화하기</string>

    <string name="rentalTime">이용시간</string>
    <string name="rentalOpenTime">운영시간</string>
    <string name="price">판매가</string>
    <string name="checkIn">체크인</string>
    <string name="checkOut">체크아웃</string>
    <string name="noticeReservation">예약공지</string>
    <string name="rulesCancel">취소규정</string>
    <string name="reserve">예약하기</string>
    <string name="reserveRental">대실 예약하기</string>
    <string name="reserveNight">숙박 예약하기</string>
    <string name="reserveFull">예약마감</string>

    <string name="accommodationReservation">숙소 예약</string>
    <string name="reservationInfo">예약정보</string>
    <string name="usingSafeNumber">안심번호 적용중</string>
    <string name="reservationName">예약자 이름</string>
    <string name="reservationContact">예약자 번호</string>
    <string name="visitorName">방문자 이름</string>
    <string name="visitorContact">방문자 번호</string>
    <string name="anotherPersonWillVisit">다른 사람이 방문할 거에요</string>
    <string name="necessaryWhenCheckIn">체크인 시 필요합니다</string>
    <string name="necessaryWhenGetMessage">예약문자 발송 시 필요합니다</string>
    <string name="infoVisitor">◎ 체크인 시 방문자의 정보로 본인 여부를 확인합니다.</string>
    <string name="onFoot">도보</string>
    <string name="byVehicle">차량</string>

    <string name="discountInfo">가격 및 할인 정보</string>
    <string name="reservationPrice">예약금액</string>
    <string name="discountPrice">할인금액</string>
    <string name="coupon">쿠폰</string>
    <string name="available">적용 가능</string>
    <string name="affiliateDiscount">제휴사 할인</string>
    <string name="noPoints">포인트 없음</string>
    <string name="finalPrice">최종 결재금액</string>
    <string name="choosePayOption">결재수단 선택</string>

    <string name="termsReservation">규정 및 약관 동의</string>
    <string name="limitationForTeens">※ 미성년자는 법정대리인 동행없이 투숙 불가</string>

    <string name="kakaopay"> 카카오페이</string>
    <string name="chai"> 차이</string>
    <string name="creditCard"> 신용카드</string>
    <string name="phonePay"> 휴대폰</string>

    <string name="full">예약 마감</string>
    <string name="ratingsLast6Months">최근 6개월 누적 평점</string>

    <string name="kindness">친절도</string>
    <string name="clean">청결도</string>
    <string name="convenience">편의성</string>
    <string name="satisfactionWithFixtures">비품만족도</string>

</resources>