<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".src.activities.calendar.CalendarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_sign_in_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:padding="4dp"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_cancel"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:text="@string/chooseDate"
                android:textColor="@color/textNormal"
                android:layout_toEndOf="@+id/iv_sign_in_back"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_calendar_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textBlue"
                android:textSize="12sp"
                android:layout_centerVertical="true"
                android:text="@string/reset"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textRed"
                android:text="@string/sun"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textNormal"
                android:text="@string/mon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textNormal"
                android:text="@string/tue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textNormal"
                android:text="@string/wed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textNormal"
                android:text="@string/thu"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textNormal"
                android:text="@string/fri"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/textBlue"
                android:text="@string/sat"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_btn_sign_up_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_accent"
        android:paddingVertical="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Date Picked"
            android:textColor="@color/colorBackground"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>