<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".src.activities.sign_in.fragments.NativeSignInFragment">

    <EditText
        android:id="@+id/et_sign_in_native_id_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="40dp"
        android:hint="@string/idOrEmail"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_sign_in_native_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="24dp"
        android:hint="@string/password"
        android:textSize="16sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_native_id_email"/>

    <RelativeLayout
        android:id="@+id/rl_btn_native_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rect_gray"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_in_native_password"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/signIn"
            android:textColor="@color/colorBackground"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_sign_in_native_find_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findPassword"
        android:textColor="@color/textBlue"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_btn_native_sign_in"/>

    <RelativeLayout
        android:id="@+id/rl_btn_native_go_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rect_accent_borders"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_in_native_find_pw"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/signUpYanolja"
            android:textColor="@color/colorButton"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_btn_native_go_sign_up">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_check"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInAd"
            android:textColor="@color/textSmooth"
            android:textSize="12sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>