<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/iv_sign_up_3_back"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_back"/>

        <TextView
            android:id="@+id/tv_sign_up_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:text="@string/signUp"
            android:textColor="@color/textNormal"
            android:layout_toEndOf="@+id/iv_sign_up_3_back"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="48dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textNormal"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/signUpInfo"/>

        <EditText
            android:id="@+id/et_sign_up_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:textSize="14sp"
            android:inputType="phone"
            android:hint="@string/phoneNum"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/rl_btn_send_auth_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="6dp"
                android:background="@drawable/button_rect_gray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sendAuthCode"
                    android:textColor="@color/colorBackground"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_sign_up_input_auth_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="14sp"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/inputAuthCode"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGray"/>

        <RelativeLayout
            android:id="@+id/rl_btn_sign_up_3_finish"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/button_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/finishSignUp"
                android:textColor="@color/colorBackground"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>