<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSearchBox">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginVertical="12dp"
        android:textSize="12sp"
        android:text="@string/requestPwForPrivacy"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <EditText
            android:id="@+id/et_password_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/requestPw"
            android:textSize="14sp"
            android:layout_marginTop="48dp"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:id="@+id/rl_btn_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:background="@drawable/button_gray">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/confirm"
                android:textColor="@color/colorBackground"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>